[package]
name = "libmask"
authors = ["r6915ee"]
description = "Haxe version management library"
edition = "2024"
categories = ["development-tools", "config"]
version = "0.4.0"
license = "MIT"
homepage = "https://codeberg.org/r6915ee/mask-hx"
repository = "https://codeberg.org/r6915ee/mask-hx"
keywords = ["haxe", "version", "development", "library", "hx"]
