[package]
name = "mask-hx"
description = "Generic Haxe version manager"
edition = "2024"
version = "0.1.1"
authors = ["r6915ee"]
categories = ["command-line-utilities", "config", "development-tools"]
license = "MIT"
homepage = "https://github.com/r6915ee/mask-hx"
repository = "https://github.com/r6915ee/mask-hx"
keywords = ["haxe", "version", "development", "cli", "hx"]

[dependencies]
clap = { version = "4.5.43", features = ["cargo"] }
libmask = { version = "0.1.2", path = "../libmask" }

[dev-dependencies]
libmask = { version = "0.1.2", path = "../libmask" }
